Refactor: Organize code into Excel2YAML namespace and enhance documentation
- Moved functions and interfaces into the Excel2YAML namespace for better organization and clarity.
- Updated JSDoc comments across various files to improve documentation and provide examples.
- Refactored `evaluateWhere`, `filterTableData`, `groupBy`, `resolveTemplateVar`, `toYAML`, `toYAMLObject`, and other functions to use the new namespace.
- Enhanced the `Config`, `ExcelConfig`, `ExcludesConfig`, `GroupingNode`, `MappingNode`, `OutputConfig`, `OutputTemplate`, `ReplacementConfig`, `SpecialConfig`, `TemplateNode`, and `TransformConfig` interfaces with detailed comments and examples.
- Removed the `getTableData` function from `src/functions/getTableData.ts` and integrated it into `src/main.ts`.
- Updated TypeScript configuration to include declaration files and adjust module settings.
- Modified Typedoc configuration to improve documentation output and exclude unnecessary files.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ node_modules/
 dist/
 .DS_Store
 # TypeScript/JavaScript build output
-*.js
+[^build]*.js
 *.js.map
 *.d.ts
 # Auto-generated Office Script
