--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "None",
     "strict": true,
+    "declaration": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*", "scratch/interfaces.ts", "scratch/config.example.ts", "scratch/utils.ts"]
+  "include": [
+    "excel.d.ts",
+    "src/**/*.ts"
+  ]
 }
